--- a/dashboard.html
+++ b/dashboard.html
@@ -41,13 +41,13 @@
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item">
-            <a href="/index.html">Home</a>
+            <a href="./index.html">Home</a>
           </li>
           <li class="nav__item">
-            <a href="/pricing.html">Pricing</a>
+            <a href="./pricing.html">Pricing</a>
           </li>
           <li class="nav__item">
-            <a href="/dashboard.html">dashboard</a>
+            <a href="">dashboard</a>
           </li>
           <li class="nav__item">
             <a href="./about.html">About</a>
