--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <a href="">Home</a>
         </li>
         <li class="nav__item">
-          <a href="/pricing.html">Pricing</a>
+          <a href="./pricing.html">Pricing</a>
         </li>
         <li class="nav__item">
-          <a href="/dashboard.html">dashboard</a>
+          <a href="./dashboard.html">dashboard</a>
         </li>
         <li class="nav__item">
           <a href="./about.html">About</a>
