--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Lunar Robotics - Pricing</title>
     <link rel="icon" href="images/logo.jpg" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <nav class="nav collapsible">
@@ -19,10 +19,10 @@
           <a href="./index.html">Home</a>
         </li>
         <li class="nav__item">
-          <a href="/pricing.html">Pricing</a>
+          <a href="">Pricing</a>
         </li>
         <li class="nav__item">
-          <a href="/dashboard.html">dashboard</a>
+          <a href="./dashboard.html">dashboard</a>
         </li>
         <li class="nav__item">
           <a href="./about.html">About</a>
